[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "wallet_core_rs"
crate-type = ["staticlib", "rlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.5.2"
